Microservices/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
          - path: /newsletters
            pathType: Prefix
            backend:
              service:
                name: newsletters
                port:
                  number: 80
